[package]
name = "codegen_test"
version = "0.1.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gull = { path = "../gull" }
serde = { version = "1.0.101", features = ["derive"] }
anyhow = "*"

[dev-dependencies]
serde_json = "1.0"
k9 = "0.11"


