[package]
name = "docblock"
version = "0.0.0"
authors = ["Aaron Abramov <dabramov@fb.com>"]
edition = "2018"
description = "type generation"
license = "MIT"
repository = "https://github.com/aaronabramov/gull"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
k9 = "0.10"
