[package]
name = "gull"
version = "0.0.2"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "type generation"
license = "MIT"
repository = "https://github.com/aaronabramov/gull"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
diff = "0.1"
docblock = "0.0.1"
hex = "0.4.2"
sha2 = "0.9.1"

[dev-dependencies]
k9 = "0.10"
regex = "1"
serde = { version = "1.0.101", features = ["derive"] }
serde_cbor = "0.9"
serde_json = "1.0"

[[test]]
name = "e2e"
path = "e2e/mod.rs"
