[package]
name = "gull"
version = "2.0.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "type generation"
license = "MIT"
repository = "https://github.com/aaronabramov/gull"


[features]
default = []
sign_source = ["docblock"]

[dependencies]
anyhow = "1.0"
colored = "2"
diff = "0.1"
docblock = { version = "0.0.1", optional = true }
hex = "0.4.2"
sha2 = "0.9.1"
convert_case = "0.4"

[dev-dependencies]
k9 = "0.11"
regex = "1"
serde = { version = "1.0.101", features = ["derive"] }
serde_cbor = "0.9"
serde_json = "1.0"
