[package]
name = "gull_derive"
version = "0.0.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "type generation"
license = "MIT"
repository = "https://github.com/aaronabramov/gull"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1"

[dev-dependencies]
k9 = "0.11"
